<resources>
    <string name="app_name">Magma Tec</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">手机号码</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_smscode">验证码</string>
    <string name="action_sign_in">注册</string>
    <string name="action_login">登录</string>
    <string name="action_getSms">获取验证码</string>
    <string name="warnInfo">温馨提示：未注册账号的手机号，登录时将自动注册，且代表您同意《用户服务协议》</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_phone">手机号码无效</string>
    <string name="error_invalid_password">密码长度至少为4位</string>
    <string name="error_incorrect_password">验证码错误</string>
    <string name="error_phone_required">请填写手机号</string>
    <string name="error_userName_required">请填写用户名</string>
    <string name="error_password_required">请填写密码</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="loginnow">立即登录</string>
    <string name="login">登录</string>
    <string name="photo">头像</string>
    <string name="account">账户安全</string>
    <string name="login_tip">登录后可享受更多特权</string>
</resources>
